--- a/form.html
+++ b/form.html
@@ -9,7 +9,7 @@
         <table>
             <tr>
                 <td>NIM</td>        
-                <td width="20">:</td>
+                <td>:</td>
                 <td><input type="text" name="txtnim" size="15" maxlength="10"></td>
             </tr>
             <tr>
@@ -20,8 +20,10 @@
             <tr>
                 <td>JENIS KELAMIN</td>
                 <td>:</td>
-                <td><input type="radio" name="rbjeniskelamin" value="P" checked> Pria
-                <input type="radio" name="rbjeniskelamin" value="W" checked> Wanita</td>
+                <td>
+                    <input type="radio" name="rbjeniskelamin" value="P"> Pria
+                    <input type="radio" name="rbjeniskelamin" value="W"> Wanita
+                    </td>
             </tr>
             <tr>
                 <td>JURUSAN</td>
@@ -38,10 +40,12 @@
             <tr>
                 <td>HOBBY</td>
                 <td>:</td>
-                <td><input type="checkbox" name="cbhobby[]" value="Komputer" checked> Komputer
-                <input type="checkbox" name="cbhobby[]" value="Musik" checked> Musik
-                <input type="checkbox" name="cbhobby[]" value="Olahraga" checked> Olahraga
-                <input type="checkbox" name="cbhobby[]" value="Travveling" checked> Travveling</td>       
+                <td>
+                    <input type="checkbox" name="cbhobby[]" value="Komputer"> Komputer
+                    <input type="checkbox" name="cbhobby[]" value="Musik"> Musik
+                    <input type="checkbox" name="cbhobby[]" value="Olahraga"> Olahraga
+                    <input type="checkbox" name="cbhobby[]" value="Travveling"> Travelling
+                </td>       
             </tr>
             <tr>
                 <td>CATATAN</td>
@@ -68,13 +72,14 @@
                 <td>:</td>
                 <td><input type="password" name="pw"></td>
             </tr>
-            <tr></tr>
-            <tr></tr>
-            <tr></tr>
             <tr>
-                <td><input type="button" name="btnsimpan" value="Simpan">
-                <input type="button" name="btnbatal" value="Batal">
-                <input type="button" name="btnperingatan" value="Peringatan"></td>
+                <td></td>
+                <td></td>
+                <td>
+                    <input type="button" name="btnsimpan" value="Simpan">
+                    <input type="button" name="btnbatal" value="Batal">
+                    <input type="button" name="btnperingatan" value="Peringatan">
+                </td>
             </tr>
         </table>
     </head>
