--- a/form.html
+++ b/form.html
@@ -1,12 +1,13 @@
 <html>
     <head>
-        <body>
-            <title>form biodata</title>  
-        </body>
-        <form name="frmlogin" method="post" target="_blank" action="biodata.php"></form>
+        <title>Belajar Membuat Form Biodata</title>  
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
         <h1 align="center">FORM BIODATA</h1>
+        <form action="" method="post">
         <hr>
-        <table>
+        <table border="0" align="center">
             <tr>
                 <td>NIM</td>        
                 <td>:</td>
@@ -50,7 +51,7 @@
             <tr>
                 <td>CATATAN</td>
                 <td>:</td>
-                <td><textarea name="txtcatatan" cols="100" rows="5"></textarea></td>
+                <td><textarea name="txtcatatan" cols="50" rows="5"></textarea></td>
             </tr>
             <tr>
                 <td>FOTO</td>
@@ -81,6 +82,7 @@
                     <input type="button" name="btnperingatan" value="Peringatan">
                 </td>
             </tr>
-        </table>
-    </head>
+        </body>
+
+        </table> 
 </html>
