--- a/form.html
+++ b/form.html
@@ -3,11 +3,11 @@
         <title>Belajar Membuat Form Biodata</title>  
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
-        <h1 align="center">FORM BIODATA</h1>
+    <body class="bgcolor">
+        <h1 class="txcolor bgcolor2" align="center">FORM BIODATA</h1>
         <form action="" method="post">
-        <hr>
-        <table border="0" align="center">
+        
+        <table class="txcolor" border="0" align="center">
             <tr>
                 <td>NIM</td>        
                 <td>:</td>
@@ -77,9 +77,9 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <input type="button" name="btnsimpan" value="Simpan">
-                    <input type="button" name="btnbatal" value="Batal">
-                    <input type="button" name="btnperingatan" value="Peringatan">
+                    <input class="button1 hover" type="button" name="btnsimpan" value="Simpan">
+                    <input class="button2 hover2" type="button" name="btnbatal" value="Batal">
+                    <input class="button3 hover3" type="button" name="btnperingatan" value="Peringatan">
                 </td>
             </tr>
         </body>
